# pulse-layer

./: .clippy.toml  .gitignore  .markdownlint-cli2.yaml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  README.pl.md  SECURITY.md  build.rs  cliff-release.toml  cliff.toml  renovate.json  run_macos.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: audit.yml  cargo-check.yml  release.yml  validate.yml
macos/: Info.plist
overlay/: eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
overlay/src/: main.ts  style.css
scripts/: bump-version.sh
src/: app.rs  config.rs  constants.rs  main.rs  server.rs  settings.rs  types.rs
src/ble/: mod.rs  protocol.rs  worker.rs
src/i18n/: en.rs  mod.rs  pl.rs
src/ui/: connected_view.rs  helpers.rs  mod.rs  scan_view.rs  settings_view.rs  style.rs
