[package]
name = "pulse-layer"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
btleplug = "0.11.8"
dirs = "6.0.0"
futures = "0.3.32"
iced = { version = "0.14.0", features = ["tokio", "wgpu"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sys-locale = "0.3.2"
tokio = { version = "1.50.0", features = ["full"] }
uuid = "1.22.0"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
