[package]
name = "pulse-layer"
version = "0.1.24"
edition = "2024"
rust-version = "1.88"
description = "Real-time heart rate OBS overlay powered by a Bluetooth smart ring"
license = "MIT"
repository = "https://github.com/wielorzeczownik/pulse-layer"
readme = "README.md"
keywords = ["obs", "overlay", "heart-rate", "bluetooth", "bpm", "smart-ring", "qring"]
categories = ["gui", "network-programming"]

[dependencies]
# Runtime + error handling
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0.102"

# HTTP server
axum = { version = "0.8.8", features = ["ws"] }

# Bluetooth
btleplug = "0.12.0"
futures = "0.3.32"

# GUI overlay
iced = { version = "0.14.0", features = ["tokio", "wgpu"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Utilities
dirs = "6.0.0"
sys-locale = "0.3.2"
uuid = "1.22.0"

[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
